# Proyecto-Interfaz-IA

./: .gitignore  README.md  Reporte_Cambios_Sesion.tex  package-lock.json  package.json
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: AlgorithmPanel.tsx  CloudDropdown.tsx  FigureShapes.tsx  FiguresCanvas.tsx  HelpPanel.tsx  KeyboardShortcuts.tsx  NodeSelectionPanel.tsx  NodeTypeDropdown.tsx  TopActionsPanel.tsx  useRobotMovement.ts
client/src/components/nodes/: NodeCircle.tsx  NodeEllipse.tsx  NodeEmpty.tsx  NodeGroupTest.tsx  NodeRombo.tsx  NodeTest.tsx  RobotNode.tsx
client/src/controllers/: toFromJson.ts
client/src/models/: defaultEdgeModel.ts  defaultNodeModel.ts
client/src/utils/: autoConnectUtils.ts  geometry.ts
server/: API.py  Busquedas.py  Dockerfile  README  README.md  docker-compose.yml  ejemplo_entrada.json  ejemplo_entrada_dls.json  generarJSON.py  grafo.txt  main.py  pyproject.toml
server/app/: API.py  Busquedas.py
server/tests/: ejemplo_entrada.txt
server/utils/: generarJSON.py
