[tool.poetry]
name = "api-ai"
version = "0.1.0"
description = ""
authors = ["FridaMartinezLorenzo <117133767+FridaMartinezLorenzo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
